--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="header">
+      <a class="add-note" title="添加笔记" href="#"><span class="fa fa-plus"></span> 添加</a>
+    </div>
+    <div class="content"></div>
+    <div class="starrySky"></div>
+  <script src="/javascripts/index.js"></script>
   </body>
 </html>
