--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <div class="header">
       <a class="add-note" title="添加笔记" href="#"><span class="fa fa-plus"></span> 添加</a>
     </div>
-    <div class="content"></div>
+    <div class="wrapper"></div>
     <div class="starrySky"></div>
   <script src="/javascripts/index.js"></script>
   </body>
