--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <div class="header">
-      <a class="add-note" title="添加笔记" href="#"><span class="fa fa-plus"></span> 添加</a>
-    </div>
-    <div class="wrapper"></div>
-    <div class="starrySky"></div>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+  <title>
+   Note-App
+  </title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <div class="header">
+    <a class="add-note" title="添加笔记" href="#">
+        <svg t="1501946819665" class="icon"  style="" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2448" xmlns:xlink="http://www.w3.org/1999/xlink" width="3em" height="3em"><defs><style type="text/css"></style></defs><path d="M258.551102 523.764951c5.145184 5.14109 12.253068 8.328689 20.094664 8.334829l217.625506 0.159636 0.165776 217.630622c0 7.840572 3.186576 14.944364 8.332782 20.088524 5.14109 5.142114 12.243859 8.332782 20.091594 8.334829 15.689331 0.016373 28.40084-12.695137 28.385491-28.384467l-0.160659-217.628576 217.625506 0.163729c15.688307 0.014326 28.399817-12.698207 28.385491-28.385491-0.005117-15.688307-12.736069-28.418236-28.424376-28.428469l-217.624483-0.165776-0.165776-217.620389c-0.010233-15.689331-12.735046-28.41619-28.424376-28.429493-15.689331-0.010233-28.40084 12.701277-28.389584 28.385491l0.164752 217.624483-217.624483-0.160659c-15.689331-0.010233-28.40084 12.701277-28.390607 28.385491C250.22139 511.520069 253.408989 518.623861 258.551102 523.764951" p-id="2449" fill="#00B7FF"></path><path d="M920.518672 507.623319c0-108.99746-42.503023-211.475436-119.685893-288.551882C723.649909 141.991921 621.030717 99.54825 511.873622 99.54825c-109.154026 0-211.773218 42.443671-288.961204 119.523187-77.181847 77.076446-119.683846 179.549306-119.683846 288.551882 0 79.410608 22.861684 156.398026 66.124 222.647893 8.576329 13.129019 26.187429 16.824177 39.341007 8.268314 13.149485-8.568143 16.856923-26.152637 8.280594-39.287795-37.2156-56.988945-56.892755-123.254162-56.892755-191.628412 0-193.7047 157.815305-351.299995 351.793228-351.299995 193.986109 0 351.796298 157.595294 351.796298 351.299995 0 193.71084-157.819398 351.306134-351.796298 351.306134-64.238047 0-127.07621-17.440208-181.728948-50.441832-13.43601-8.112772-30.91101-3.807722-39.035038 9.607822-8.123005 13.416568-3.817955 30.867008 9.612938 38.977733 63.531965 38.355563 136.545886 58.626235 211.151048 58.626235 109.151979 0 211.772194-42.443671 288.955064-119.523187C878.011556 719.100802 920.518672 616.625896 920.518672 507.623319" p-id="2450" fill="#00B7FF"></path></svg>
+    </a> 
+    <ul class="user-area">
+      <% if (isLogin){ %>
+        <li><img src="<%= user.avatar %>" alt=""></li>
+        <li><span title="<%= user.username %>"><%= user.username %></span></li>
+        <li><span class="line"> | </span> </li>
+        <li><a class="logout" href="/auth/logout">注销</a></li>
+      <%} else { %>
+          <li><a class="login" title="GitHub登录" href="/auth/github"> GitHub登录</a>
+          </li>
+      <% } %>
+    </ul>
+  </div>
+  <!-- <a class="add-note" title="添加笔记" href="#"><span class="fa fa-plus"></span> 添加</a> -->
+  <div class="wrapper"></div>
+  <div class="starrySky"></div>
   <script src="/javascripts/index.js"></script>
-  </body>
+</body>
+
 </html>
