--- a/src/sass/toast.scss
+++ b/src/sass/toast.scss
@@ -3,8 +3,8 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: 20px;
-    color:black;
-    background: blue;
+    color:#fff;
+    background: rgb(0,155,219);
     padding: 5px 10px;
     border-radius: 3px;
     box-shadow: 0 0 3px 1px rgba(255, 2552, 255, .6);
