加入时间更新样式

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+  <!-- <link rel="shortcut icon" href="/favicon"> -->
   <title>
    Note-App
   </title>
@@ -30,8 +31,10 @@
             <a class="login" title="GitHub登录" href="/auth/github"> GitHub登录</a>
         </div>
       <% } %>
-  <div class="wrapper"></div>
-      <div class="noite"></div> 
+    <div class="wrapper">
+    </div>
+
+    <div class="noite"></div> 
     
     <!-- 星空页面，再次绝对定位，覆盖在上个背景画布上面 -->
      <div class="constelacao"></div>   
