--- a/src/sass/note.scss
+++ b/src/sass/note.scss
@@ -1,4 +1,5 @@
 .signIn{
+    min-width: 16em;
     position: absolute;
     left:50%;
     top:50%;
@@ -72,25 +73,43 @@
 
 .wrapper{
     position: relative;
-    // display: flex;
-    // border:1px solid green;
     background: #000;
-    // overflow: scroll;
     .note{
         z-index: 999;
         width: 8em;
         opacity: .88;
         position: absolute;
         transition: all 0.6s ease-in-out;
-        margin:1em 1em 0 1em;
+        margin:1.5em 1em 0 1em;
+        box-shadow: -4px 1px 3px 1px black; 
         .note-head{
-            padding: 1em;
+            padding: .5em;
+            border-radius: 2px;
+            text-align: right;
             .delete{
                 cursor: pointer;
+                font-size:1.5em;
+                color:#fff;
+                &:hover{
+                    color:black;
+                }
             }
-    }
-    .note-content{
-        padding: 2em 2em;
-       }   
+        }
+        .note-content{
+            padding: 2em 2em;
+        }
+        .time{
+            display: none;
+            position: absolute;
+            left:0;
+            color:#fff;
+            top:-21px;
+            height: 1em;
+        }
+        &:hover{
+            .time{
+                display: block;
+            }
+        }   
     }
 }
